styles.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 100%;
    padding: 25px 15%;
    background-color: #1f2937;

    & #logo {
        font-size: 24px;
        color: #f9faf8;
    }
    
    & #menu ul {
        display: flex;
        list-style: none;
        gap: 50px;
        font-size: 18px;
        color: #e5e7eb;
    }
}

#info {
    padding: 10% 15% 0px 15%;
    height: 100vh;
    gap: 10%;
    display: grid;
    grid-template-columns: 45% 45%;
    background-color: #1f2937;
}

#info-container {
    position: relative;
}

#info-container-text{
    position: absolute;
    top: 7%;
}

#info-container-text > * {
    margin-bottom: 20px;
}

#info-container-text-title {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
    display: block;
}

#info-container-text-p {
    font-size: 18px;
    color: #e5e5e5;
}

button {
    background-color: #3882f6;
    font-size: 18px;
    color: #f9faf8;
    height: 40px;
    width: 150px;
    border: none;
    border-radius: 12px;
    text-align: center;
    margin-left: 35%;
}
button:hover {
    transition: 500ms;
    background-color: #196df4;
}

#info-image {
    width: 100%;

    & img {
        width: 500px;
        border-radius: 20px;
        margin-top: 55px;
    }
}

/* Information */
#social-proof {
    display: flex;
    flex-wrap:wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 5% 15% 20% 15%;

    & center {
        font-size: 36px;
        font-weight: bolder;
        color: #1f231f;
        margin-bottom: 100px;
    }

    & #information-list,
    #information-list ul {
        width: 100%;
        height: 10vh;
    }

    & #information-list ul {
        display: flex;
        list-style: none;
        align-items: center;
        justify-content: space-evenly;
        flex-wrap: wrap;
        margin: auto;
        width: 100%;
    }

    & .information-icons img {
        border-radius: 20px;
        width: 200px;
        height: 200px;
        margin-bottom: 30px;
    }

    & .information-subtext {
        width: 200px;
        color: #54565a;
        font-size: 20px;
    }
}

/* quote section */

#quote-section {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 50vh;
    background-color: #e5e7eb;

    & pre {
        justify-content: center;
        align-items: flex-end;
        margin-top: 5%;
        width:fit-content;
        font-size: 36px;
        font-style: italic;
        font-weight: lighter;
        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
        color: #1f2937;
    }

    & pre span {
        font-size: 24px;
        font-style: normal;
        font-weight: bold;
    }
}

/* Sign up Section*/

#sign-up-section {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 40vh;

    & #sign-up-container{
        display: flex;
        align-items: center;
        justify-content: center;
        background-color: #3882f6;
        width: 50%;
        padding: 20px 100px;
        border-radius: 20px;

        & .sign-up-container-item {
            flex: 1;
            font-size: 26px;
            color: #e5e5e5;

            & button{
                border:  2px solid #e5e5e5;
            }

            & button:hover {
                background-color: #e5e5e5;
                color: #196df4;
            }
        }
    }
}

